--- a/css/index.css
+++ b/css/index.css
@@ -252,3 +252,24 @@
     max-width: 250px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .header_h1 {
+    font-size: 2rem;
+  }
+
+  .h1_corpo {
+    font-size: 1.5rem;
+  }
+
+  .buttons button {
+    font-size: 0.9rem;
+    padding: 10px;
+  }
+
+  .flores {
+    max-width: 150px;
+    position: relative;
+    z-index: -1;
+  }
+}
